--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <meta harset="utf-8">
 <meta name="viewport" content="width-device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
-<script source="main.js"></script>
 
-    </head>
+</head>
     <body>
         <div class="fundo">
             <h1>Criado por Luiz</h1>
@@ -19,31 +18,31 @@
           
             <table>
                 <tr>
-                    <td><button>C</button></td>
-                    <td><button><</button></td>
-                    <td><button>/</button></td>
-                    <td><button>X</button></td>
+                    <td><button class="botao">C</button></td>
+                    <td><button class="botao"><</button></td>
+                    <td><button class="botao">/</button></td>
+                    <td><button class="botao">X</button></td>
                 </tr>
                 <tr>
-                    <td><button>7</button></td>
-                    <td><button>8</button></td>
-                    <td><button>9</button></td>
-                    <td><button>-</button></td>
+                    <td><button class="botao">7</button></td>
+                    <td><button class="botao">8</button></td>
+                    <td><button class="botao">9</button></td>
+                    <td><button class="botao">-</button></td>
                 </tr>
                 <tr>
-                    <td><button>4</button></td>
-                    <td><button>5</button></td>
-                    <td><button>6</button></td>
-                    <td><button>+</button></td>
+                    <td><button class="botao">4</button></td>
+                    <td><button class="botao">5</button></td>
+                    <td><button class="botao">6</button></td>
+                    <td><button class="botao">+</button></td>
                 </tr>
                 <tr>
-                    <td><button>1</button></td>
-                    <td><button>2</button></td>
-                    <td><button>3</button></td>
-                    <td rowspan="2"><button>=</button></td>
+                    <td><button class="botao">1</button></td>
+                    <td><button class="botao">2</button></td>
+                    <td><button class="botao">3</button></td>
+                    <td rowspan="2"><button class="botao" style="height: 106px;">=</button></td>
                 </tr>
             <tr>
-                <td colspan="2"><button>0</button></td>
+                <td colspan="2"><button class="botao" style="width: 106px;">0</button></td>
                 <td><button>.</button></td>
             </tr>
             </table>
