--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
     <body>
         <div class="fundo">
-            <h1>Criado por Luiz</h1>
+            <h1><i><s>Criado por Luiz</s></i></h1>
             <div class="Calculadora">
-                <h1>Calculadora</h1>
+                <h1><i><strong>Calculadora</strong></i></h1>
                 <p id="resultado">resultado</p>
           
             <table>
