--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
     <body>
         <div class="fundo">
-            <h1><i><s>Criado por Luiz</s></i></h1>
+            <h1><i><s>Criado por Luizinho do grau</s></i></h1>
             <div class="Calculadora">
                 <h1><i><strong>Calculadora</strong></i></h1>
                 <p id="resultado">resultado</p>
@@ -43,7 +43,7 @@
                 </tr>
             <tr>
                 <td colspan="2"><button class="botao" style="width: 106px;">0</button></td>
-                <td><button>.</button></td>
+                <td><button class="botao">.</button></td>
             </tr>
             </table>
           </div>
