--- a/index.html
+++ b/index.html
@@ -14,38 +14,49 @@
             <h1><i><s>Criado por Luizinho do grau</s></i></h1>
             <div class="Calculadora">
                 <h1><i><strong>Calculadora</strong></i></h1>
-                <p id="resultado">resultado</p>
-          
-            <table>
-                <tr>
-                    <td><button class="botao">C</button></td>
-                    <td><button class="botao"><</button></td>
-                    <td><button class="botao">/</button></td>
-                    <td><button class="botao">X</button></td>
-                </tr>
-                <tr>
-                    <td><button class="botao">7</button></td>
-                    <td><button class="botao">8</button></td>
-                    <td><button class="botao">9</button></td>
-                    <td><button class="botao">-</button></td>
-                </tr>
-                <tr>
-                    <td><button class="botao">4</button></td>
-                    <td><button class="botao">5</button></td>
-                    <td><button class="botao">6</button></td>
-                    <td><button class="botao">+</button></td>
-                </tr>
-                <tr>
-                    <td><button class="botao">1</button></td>
-                    <td><button class="botao">2</button></td>
-                    <td><button class="botao">3</button></td>
-                    <td rowspan="2"><button class="botao" style="height: 106px;">=</button></td>
-                </tr>
-            <tr>
-                <td colspan="2"><button class="botao" style="width: 106px;">0</button></td>
-                <td><button class="botao">.</button></td>
-            </tr>
-            </table>
+                <p id="resultado"></p>
+                <table>
+                    <tr>
+                        <td><button class="botao" onclick="clean()">C</button></td>
+                        <td><button class="botao"><</button></td>
+                        <td><button class="botao" onclick="insert ('/')">/</button></td>
+                        <td><button class="botao" onclick="insert ('X')">X</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="botao" onclick="insert ('7')">7</button></td>
+                        <td><button class="botao" onclick="insert ('8')">8</button></td>
+                        <td><button class="botao" onclick="insert ('9')">9</button></td>
+                        <td><button class="botao" onclick="insert ('-')">-</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="botao" onclick="insert ('4')">4</button></td>
+                        <td><button class="botao" onclick="insert ('5')">5</button></td>
+                        <td><button class="botao" onclick="insert ('6')">6</button></td>
+                        <td><button class="botao" onclick="insert ('+')">+</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="botao" onclick="insert ('1')">1</button></td>
+                        <td><button class="botao" onclick="insert ('2')">2</button></td>
+                        <td><button class="botao" onclick="insert ('3')">3</button></td>
+                        <td rowspan="2"><button class="botao" style="height: 106px;">=</button></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><button class="botao" style="width: 106px;" onclick="insert ('0')">0</button></td>
+                        <td><button class="botao" onclick="insert ('.')">.</button></td>
+                    </tr>
+                </table>   
+
           </div>
+          <script>
+            function insert (num)
+            {
+                var numero=document.getElementById ('resultado').innerHTML;
+                document.getElementById ('resultado').innerHTML = numero+num;
+            }
+            function clean()
+            {
+                document.getElementById('resultado').innerHTML="";
+            }
+        </script>
     </body>
 </html>
